# chrismas-app

./: .buildpacks  .gitignore  Procfile  RustConfig  buildpack-run.sh  package.json
backend/: .env  Cargo.toml
backend/migrations/2018-11-27-062839_friends/: down.sql  up.sql
backend/migrations/2018-11-28-075457_draw_result/: down.sql  up.sql
backend/migrations/2018-11-29-201643_excluded/: down.sql  up.sql
backend/migrations/2018-12-26-131510_draws/: down.sql  up.sql
backend/migrations/2018-12-26-131609_participants/: down.sql  up.sql
backend/migrations/2018-12-26-131749_drawn_excluded/: down.sql  up.sql
backend/migrations/2018-12-26-132025_drawn_result/: down.sql  up.sql
backend/src/: controllers.rs  db.rs  db_executor.rs  draw.rs  main.rs  schema.rs
backend/src/db/: schema.rs
backend/src/draw/: backtracking_algorithm.rs  mod.rs
backend/src/service/: create_draw.rs  execute_draw.rs  find_drawn.rs  find_participants.rs  mod.rs  models.rs
frontend/: elm.json  package.json  webpack.config.js
frontend/src/: Create.elm  Main.elm  Route.elm  State.elm  Types.elm  View.elm  index.html  index.js  styles.scss
frontend/src/Autocomplete/: Menu.elm
frontend/src/Create/: State.elm  Types.elm  View.elm
frontend/src/Draw/: State.elm  Types.elm  View.elm
frontend/src/Link/: View.elm
