[package]
edition = "2018"
name = "backend"
version = "0.1.0"
authors = ["Krzysztof Hadaś <krzysztofhadas6@gmail.com>"]

[dependencies]
actix-web = "0.7"
diesel = { version = "1.0.0", features = ["postgres", "uuid"] }
dotenv = "0.9.0"
serde = "1.0"
rand = "0.6.1"
serde_derive = "1.0"
actix = "0.7"
futures = "0.1"
log = "0.4.0"
env_logger = "0.6.0"
uuid = { version = "0.6", features = ["serde", "v4"] }